layout pronto e chamada pra api

--- a/wiki-fe/jsconfig.json
+++ b/wiki-fe/jsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
+      "@/components/*": ["./src/app/_components/*"],
+      "@/styles/*": ["./src/app/_styles/*"],
+      "@/assets/*": ["./src/app/_assets/*"],
     }
   }
 }
