--- a/wiki-fe/jsconfig.json
+++ b/wiki-fe/jsconfig.json
@@ -6,6 +6,7 @@
       "@/components/*": ["./src/app/_components/*"],
       "@/styles/*": ["./src/app/_styles/*"],
       "@/assets/*": ["./src/app/_assets/*"],
+      "@/lib/*": ["src/app/_lib/*"],
     }
   }
 }
