--- a/wiki-fe/package.json
+++ b/wiki-fe/package.json
@@ -12,6 +12,7 @@
     "jose": "^5.9.3",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-showdown": "^2.3.1"
   }
 }
