--- a/wiki-fe/package.json
+++ b/wiki-fe/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "jose": "^5.9.3",
+    "mailersend": "^2.3.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
