--- a/wiki-fe/package.json
+++ b/wiki-fe/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.6",
     "jose": "^5.9.3",
     "mailersend": "^2.3.0",
     "next": "14.2.13",
