--- a/wiki-fe/package.json
+++ b/wiki-fe/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^6.1.6",
     "jose": "^5.9.3",
     "mailersend": "^2.3.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-showdown": "^2.3.1"
+    "react-router-dom": "^6.27.0",
+    "react-showdown": "^2.3.1",
+    "wiki-fe": "file:"
   }
 }
