--- a/wiki-fe/package.json
+++ b/wiki-fe/package.json
@@ -14,10 +14,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^6.1.6",
+    "chart.js": "^4.4.6",
     "jose": "^5.9.3",
     "mailersend": "^2.3.0",
     "next": "14.2.13",
+    "openweather-apis": "^4.5.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-router-dom": "^6.27.0",
     "react-showdown": "^2.3.1",
