--- a/wiki-fe/jsconfig.json
+++ b/wiki-fe/jsconfig.json
@@ -7,6 +7,8 @@
       "@/styles/*": ["./src/app/_styles/*"],
       "@/assets/*": ["./src/app/_assets/*"],
       "@/lib/*": ["src/app/_lib/*"],
+      "@/contexts/*": ["./src/app/contexts/*"],
+      "@/hooks/*": ["./src/app/_hooks/*"]
     }
   }
 }
