--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 venv
+.venv
 *.pyc
 node_modules
+poetry.lock
+pyproject.toml
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
